--- a/user-api/user-api/pom.xml
+++ b/user-api/user-api/pom.xml
@@ -31,6 +31,12 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -58,8 +64,18 @@
     		<artifactId>jakarta.validation-api</artifactId>
     		<version>3.0.0</version> <!-- ou a versão mais recente -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-data-mongodb</artifactId>			
+		</dependency>
 
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.scala-lang</groupId>
+     <artifactId>scala-library</artifactId>
+     <version>2.13.0</version>
+   </dependency>
+ </dependencies>
 
 
 
